# ethernet-to-spi

./: .gitignore  .gitmodules  LICENSE.txt  README.md
model/: .gitignore  eth2spi.v
model/test/: Makefile  test_eth2spi.v
sch/bytesync/: bytesync.kicad_pcb  bytesync.kicad_prl  bytesync.kicad_pro  bytesync.kicad_sch
sch/bytesync/gerber/: bytesync-Edge_Cuts.gbr  bytesync-F_Cu.gbr  bytesync.drl  millproject
sch/ethernet-to-spi/: eth.kicad_sym  ethernet-to-spi.kicad_pcb  ethernet-to-spi.kicad_prl  ethernet-to-spi.kicad_pro  ethernet-to-spi.kicad_sch  fp-lib-table  sym-lib-table
sch/ethernet-to-spi/eth.pretty/: G8X-188S7-BP.kicad_mod
sch/ethernet-to-spi/gerber/: ethernet-to-spi-Edge_Cuts.gbr  ethernet-to-spi-F_Cu.gbr  ethernet-to-spi.drl  millproject
sch/nlpgen/: nlpgen.kicad_pcb  nlpgen.kicad_prl  nlpgen.kicad_pro  nlpgen.kicad_sch
sch/nlpgen/gerber/: millproject  nlpgen-Edge_Cuts.gbr  nlpgen-F_Cu.gbr  nlpgen.drl
sch/shield/: ERRATA.md  fp-info-cache  fp-lib-table  shield.kicad_pcb  shield.kicad_prl  shield.kicad_pro  shield.kicad_sch  sym-lib-table
sch/shield/gerber/: shield-B_Cu.gbr  shield-B_Mask.gbr  shield-B_Paste.gbr  shield-B_Silkscreen.gbr  shield-Edge_Cuts.gbr  shield-F_Cu.gbr  shield-F_Mask.gbr  shield-F_Paste.gbr  shield-F_Silkscreen.gbr  shield-In1_Cu.gbr  shield-In2_Cu.gbr  shield.drl
sch/shield/schield.pretty/: ARJM11D7-009.kicad_mod  partial-nucleo64.kicad_mod
sch/transmitter/: transmitter.kicad_pcb  transmitter.kicad_prl  transmitter.kicad_pro  transmitter.kicad_sch
sch/transmitter/gerber/: millproject  transmitter-B_Cu.gbr  transmitter-Edge_Cuts.gbr  transmitter-F_Cu.gbr  transmitter.drl
spitest/: spitest.py
stm32eth/: Cargo.toml  defmt.sh  memory.x
stm32eth-f401/: .gitignore  Cargo.toml
stm32eth-f401/.cargo/: config
stm32eth-f401/src/: adapter.rs  bot_task.rs  device.rs  event.rs  index.html  main.rs  receiver.rs  tg.rs  tg_bot.rs  tls_task.rs  transmitter.rs  tx_frame_buf.rs  unescape.rs
stm32eth/.cargo/: config
stm32eth/src/: device.rs  index.html  main.rs  receiver.rs  server.rs  transmitter.rs  tx_frame_buf.rs
waveforms/: encoder.json  eth.json  idle-hi.json  idle-lo.json
