[package]
name = "stm32eth-f401"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
defmt-rtt = "0.4"
systick-monotonic = "1"
cortex-m-rtic = ">=1.1"
crc = "2"
embedded-dma = ">=0.2"

[dependencies.defmt]
version = "0.3"
features = ["encoding-raw"]

[dependencies.stm32f4xx-hal]
path = "../stm32f4xx-hal"
features = ["stm32f401"]

[dependencies.replace_with]
version = "0.1.7"
default-features = false

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = ["proto-ipv4", "socket-udp", "socket-icmp", "socket-tcp", "socket-dhcpv4", "medium-ethernet", "defmt"]

[dependencies.httparse]
version = "1.8"
default-features = false

[dependencies.heapless]
version = "0.7"
features = ["serde"]

[dependencies.embedded-tls]
version = "0.10"
default-features = false
features = ["async", "defmt"]

[dependencies.rand]
version = "0.8"
default-features = false
features = ["std_rng"]

[dependencies.embedded-io]
version = "0.4"
default-features = false
features = ["defmt", "async"]

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.futures-executor]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.serde_derive]
version = "1.0.147"
default-features = false

[dependencies.serde-json-core]
version = "0.5"
default-features = false
features = ["heapless"]
